@@ -198,13 +198,23 @@ print '<th>Action</th></tr>';
 print "<input type=\"hidden\" name=\"project_id\" value=\"$project_id\"/>\n";
 
 
-$lines = explode("\n", $contents);
+//$lines = explode("\n", $contents); // See http://stackoverflow.com/questions/3997336/explode-php-string-by-new-line
+$lines = preg_split('/\r\n|\n|\r/', $contents, -1, PREG_SPLIT_NO_EMPTY);
 $names_by_email = array();
 $roles_by_email = array();
+$skips = "";
 foreach($lines as $line) {
   $parts = explode(",", $line);
   if (count($parts) < 2) continue;
   $email = trim($parts[0]);
+  $email = filter_var($email, FILTER_SANITIZE_EMAIL);
+  if (! filter_var($email, FILTER_VALIDATE_EMAIL)) {
+    error_log("Uploaded file of candidate members had invalid email address: " . $line);
+    if ($skips !== "")
+      $skips = $skips . ", ";
+    $skips = $skips . $email;
+    continue;
+  }
   $name = trim($parts[1]);
   $role = null;
   if (count($parts) > 2) $role = trim($parts[2]);
@@ -249,6 +259,9 @@ foreach($names_by_email as $email => $name) {
 }
 
 print '</table>';
+if ($skips !== "") {
+  print "<p class='warn'>Skipped invalid email addresses: $skips</p>\n";
+}
 print "<br/>\n";
 print "<input type=\"submit\" value=\"Invite Selected Members\"/>\n";
 print "<input type=\"button\" value=\"Cancel\" onclick=\"history.back(-1)\"/>\n";
